adicionando pages e modificando icons

--- a/style.css
+++ b/style.css
@@ -165,19 +165,51 @@ body{
     }
 }
 
+h1{
+    text-align: center;
+    margin-bottom: 50px;
+}
+
 .produto {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     
   }
 
   .produto img {
-    width: 150px;
+    width: 550px;
     margin-right: 50%;
     border-radius: 20px;
+    overflow: hidden;
   }
 
   .produto .descricao {
     font-size: 16px;
   }
+
+  .about{
+    text-align: center;
+    display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    
+  }
+
+  .about h1{
+    margin-bottom: 30px;
+  }
+
+  .contact .contato{
+    text-align: center;
+    justify-content: center;
+  }
+
+  .link .botoes{
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    margin: 10px;
+  }
+  
