--- a/style.css
+++ b/style.css
@@ -182,7 +182,6 @@ h1{
     width: 550px;
     margin-right: 50%;
     border-radius: 20px;
-    overflow: hidden;
   }
 
   .produto .descricao {
@@ -212,5 +211,10 @@ h1{
     justify-content: center;
     display: flex;
     margin: 10px;
+  }
+
+  .pedido-text{
+    text-align: center;
+    margin-bottom: 30px;
   }
   
